syntax = "proto3";
package jackaldao.canine.storage;

option go_package = "github.com/jackal-dao/canine/x/storage/types";

message Miners {
  string address = 1; 
  string ip = 2; 
  string totalspace = 3; 
  string burned_contracts = 4;
  string creator = 5;
}

